...
                      IconButton(
                        icon: Icon(Icons.arrow_back),
                        onPressed: () => Navigator.pop(context),
                        iconSize: maxWidth * 0.06, // Tamaño de icono responsivo
                      ),
                      Text(
                        'All Events',
                        style: TextStyle(
                          fontSize: maxWidth * 0.06, // Texto responsivo
                          fontWeight: FontWeight.bold,
                        ),
                      ),
                    ],
...
                    height: maxHeight * 0.05,
                    child: SingleChildScrollView(
                      scrollDirection: Axis.horizontal,
                      child: Row(
                        children: [
                          _buildFilterChip('All', controller.currentFilter == 'All', maxWidth, maxHeight),
                          _buildFilterChip('Upcoming', controller.currentFilter == 'Upcoming', maxWidth, maxHeight),
                          _buildFilterChip('Past Events', controller.currentFilter == 'Past Events', maxWidth, maxHeight),
                        ],
                      ),
                    ),
                  ),

...
